removed duplicate file

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <title>Vignesh Eligeti Portfolio</title>
   <style>
-    /* Custom CSS for light color navigation links */
-.nav-pills .nav-link {
-  color: white; /* Light color for inactive links */
-}
+    .nav-pills .nav-link {
+      color: white; 
+    }
 
-.nav-pills .nav-link.active {
-  color: #333; /* Darker color for active link */
-}
+    .nav-pills .nav-link.active {
+      color: #333; 
+    }
 
   </style>
 </head>
