--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-        <img class="rounded-lg-3" src="./Protfolio Profile photo.jpg" alt="" width="350" height="400">
+        <img class="rounded-lg-3" src="./Portfolio Profile photo.jpg" alt="" width="350" height="400">
       </div>
     </div>
   </div>
