--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <a href="https://www.linkedin.com/in/eligeti-vignesh-477517249/" class="btn btn-light btn-lg px-4" style="background-color: grey;">LinkedIn</a>
         </div>
       </div>
-      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-        <img class="rounded-lg-3" src="./Portfolio Profile photo.jpg" alt="" width="350" height="400">
-      </div>
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg mb-5">
+        <img class="rounded-3 img-fluid" src="./Profile Photo.jpg" alt="Profile Photo" width="350" height="400">
+      </div>      
     </div>
   </div>
 
@@ -230,7 +230,7 @@
               <div class="invalid-feedback">
                 Valid last name is required.
               </div>
-            </div>
+            </div>  
             <div class="col-12">
               <label for="email" class="form-label">Email <span class="text-body-secondary">(Optional)</span></label>
               <input type="email" class="form-control" id="email" placeholder="eligetivignesh@gmail.com">
